Error Fixed By Ganesh

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
 <body>
 
-  <h1 id="title">Drum 🥁 Kit</h1>
-  <div class="set">
+  <h1 id="title">Drum Kit</h1>
+  <div class="Drums">
     <button class="w drum">w</button>
     <button class="a drum">a</button>
     <button class="s drum">s</button>
@@ -22,9 +22,5 @@
   </div>
 <script src="index.js"></script>
 </body>
-  <footer>
-    <a href="https://www.linkedin.com/in/ganesh-pratap-singh-26ab61235/" style="text-decoration: none; color: white;">Ganesh Pratap Singh</a>
-  </footer>
-  
 
 </html>
